samples/_failures_safe/1761632096_ab37fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba8caed7.c: In function ‘main’:
./samples/SAFE/__tmp_ba8caed7.c:149:31: error: missing terminating " character
  149 |             b.rows = read_int("
      |                               ^
./samples/SAFE/__tmp_ba8caed7.c:149:13: error: expected expression at end of input
  149 |             b.rows = read_int("
      |             ^
./samples/SAFE/__tmp_ba8caed7.c:149:22: error: too few arguments to function ‘read_int’
  149 |             b.rows = read_int("
      |                      ^~~~~~~~
./samples/SAFE/__tmp_ba8caed7.c:15:5: note: declared here
   15 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_ba8caed7.c:149:13: error: expected declaration or statement at end of input
  149 |             b.rows = read_int("
      |             ^
./samples/SAFE/__tmp_ba8caed7.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ba8caed7.c:149:13: error: expected declaration or statement at end of input
